added more functionalities
