# src/main/java/org/riomoney/controllers/AuthController.java
@@ -10,21 +10,18 @@ import org.springframework.web.bind.annotation.RestController;
 public class AuthController implements AuthApi {
     @Autowired
     UserRepository userRepository;
-
     @Override
-    public ResponseEntity<LoginResponse> authLoginPost(LoginRequest loginRequest) {
-        System.out.println(userRepository.listUserNames());
-        return ResponseEntity.ok(new LoginResponse().status("ok").message("logged in successfully"));
+    public ResponseEntity<LoginResponse> signIn(LoginRequest loginRequest) {
+        return null;
     }
 
     @Override
-    public ResponseEntity<Void> authLogoutPost(LogoutRequest logoutRequest) {
-        ResponseEntity<Void> ok = (ResponseEntity<Void>) ResponseEntity.ok();
-        return ok;
+    public ResponseEntity<Void> signOut(LogoutRequest logoutRequest) {
+        return null;
     }
 
     @Override
-    public ResponseEntity<CreateUserResponse> createPost(CreateUserRequest createUserRequest) {
-        return ResponseEntity.ok(new CreateUserResponse().message("user created").status("success"));
+    public ResponseEntity<CreateUserResponse> signUp(CreateUserRequest createUserRequest) {
+        return null;
     }
 }
