# src/main/java/org/riomoney/entities/MessageEntity.java
@@ -5,32 +5,20 @@ import lombok.Data;
 import lombok.ToString;
 
 import java.sql.Timestamp;
-
 @ToString
 @Data
 @Entity
-@Table(name = "users_messages")
-public class UserMessagesEntity {
+@Table(name = "messages")
+public class MessageEntity {
 
     @Id
     @GeneratedValue(strategy = GenerationType.AUTO)
     @Column(name = "id")
     private int id;
 
-    @ManyToOne(fetch=FetchType.EAGER)
-    @JoinColumn(name="to_user")
-    private UserEntity to;
-
-    @ManyToOne(fetch=FetchType.EAGER)
-    @JoinColumn(name="from_user")
-    private UserEntity from;
-
     @Column(name = "message")
     private String message;
 
     @Column(name = "message_timestamp")
     private Timestamp timestamp;
-
-    @Column(name = "is_read")
-    private boolean isRead;
 }
